test/cases/parser/DottedTypeErr.errors
src/DottedTypeErr.b:5:14: Syntax error (couldn't parse 'M.')
